--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,8 @@
 /* Блоки */
 @import "blocks/container";
 @import "blocks/button";
+@import "blocks/section-title";
+@import "blocks/form";
+@import "blocks/table";
+@import "blocks/main-table";
+@import "blocks/main-page";
