--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $black: #000000;
 $white: #ffffff;
 $grey: #888888;
 $light: #ECF0F3;
+$blue:  #0075FF;
 $light-grey: rgba(0, 0, 0, 0.08);
 $transparent: rgba(0, 0, 0, 0);
 
