--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,10 +1,11 @@
 .container {
   width: 100%;
-  max-width: $desktop-width;
+  max-width: 720px;
   padding: 0 40px;
   margin: 0 auto;
 
-  @media (max-width: $tablet-max-width) {
+  @media (max-width: $tablet-width) {
+    max-width: 680px;
     padding: 0 20px;
   }
 }
